[workspace]
members = [
    "cellular/simcom-gprs",
    "eeprom/at25010",
    "embedded-hal-async-mocks",
    "subghz/cc1200",
]

[workspace.package]
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
repository = "https://github.com/rmja/chip-drivers"
readme = "README.md"
license = "MIT OR Apache-2.0"

[patch.crates-io]
embassy-sync = { path = "../embassy/embassy-sync" }
embassy-time = { path = "../embassy/embassy-time" }
