[workspace]
resolver = "2"
members = [
    "cellular/simcom-gprs",
    "eeprom/at25010",
    "embedded-hal-async-mocks",
    "subghz/cc1200",
    "embedded-hal-async-mocks",
]

[workspace.package]
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
repository = "https://github.com/rmja/chip-drivers"
readme = "README.md"
license = "MIT OR Apache-2.0"

# [patch.crates-io]
# embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "1ef02e53" }
# embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "1ef02e53" }
