[package]
name = "simcom-gprs-driver"
version = "0.1.0"
edition = "2021"

[features]
default = ["sim800"]
defmt = ["dep:defmt", "atat/defmt", "heapless/defmt-03"]
sim800 = []
sim900 = []

[dependencies]
# atat = "0.21"
atat = { version = "0.21", git = "https://github.com/BlackbirdHQ/atat", rev = "74bc5e3" }
defmt = { version = "0.3", optional = true }
embassy-sync = "0.5"
embassy-time = "0.3"
embedded-hal = "1"
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-nal-async = "0.7"
futures = { version = "0.3", default-features = false }
futures-intrusive = { version = "0.5", default-features = false }
heapless = "0.8"
heapless-bytes = "0.3"
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
assert_hex = "0.4"
critical-section = { version = "1", features = ["std"] }
embassy-time = { version = "0.3", features = ["std", "generic-queue"] }
embedded-io-async = { version = "0.6", features = ["std"] }
static_cell = { version = "2", features = ["nightly"] }
tokio = { version = "1", features = ["macros", "rt"] }
