[package]
name = "at25010-driver"
version = "0.1.0"
edition = "2021"
description = "AT25010, AT25020, and AT25040 (and B series) Serial EEPROM driver"

[dependencies]
bitfield = "0.14"
defmt = { version = "0.3", optional = true }
embedded-hal-async = "1.0.0-rc.3"
embedded-storage = "0.3.0"
embedded-storage-async = "0.4.0"
futures = { version = "0.3", default-features = false }

[dev-dependencies]
embedded-hal-async-mocks = { path = "../../embedded-hal-async-mocks" }
mockall = "0.12"
tokio = { version = "1", features = ["macros", "rt"] }
