[package]
name = "cc1200-driver"
version = "0.1.0"
edition = "2021"
description = "CC1200 low power and high performance wireless transceiver driver"

[features]
packet-ctrl = ["embassy-time"]

[dependencies]
bitfield = "0.14"
embassy-time = { version = "0.1", optional = true }
embedded-hal = "1.0.0-alpha.9"
embedded-hal-async = "0.2.0-alpha.0"
futures = { version = "0.3", default-features = false }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
